Fix typo in changelog

--- a/changelog
+++ b/changelog
@@ -3250,7 +3250,7 @@ pandoc (1.13.2.1)
 
 pandoc (1.13.2)
 
-  * TWiki Reader: add new new twiki reader (API chaneg, Alexander Sulfrian).
+  * TWiki Reader: add new new twiki reader (API change, Alexander Sulfrian).
 
   * Markdown reader:
 
