--- a/test/command/512.md
+++ b/test/command/512.md
@@ -36,7 +36,7 @@ Loop detection:
 
 __ link1_
 ^D
-[warning] Circular reference 'link1' at line 1 column 15
+!! Circular reference 'link1' at line 1 column 15
 <p><a href="">click here</a></p>
 ```
 
