--- a/test/command/168.md
+++ b/test/command/168.md
@@ -17,7 +17,7 @@ nested div
   [[Plain [Str "list"]]
   ,[Plain [Str "another"]]]
  ,Div ("myid",["class"],[("key","val")])
-  [Plain [Str "nested",Space,Str "div"]]]]
+  [Para [Str "nested",Space,Str "div"]]]]
 ```
 
 ```
@@ -27,4 +27,17 @@ foo
 bar
 ^D
 [Para [Str "foo",SoftBreak,Str ":::",SoftBreak,Str "bar"]]
+```
+
+```
+% pandoc -t native
+::::: Warning
+Here is a paragraph.
+
+And another.
+:::::
+^D
+[Div ("",["Warning"],[])
+ [Para [Str "Here",Space,Str "is",Space,Str "a",Space,Str "paragraph."]
+ ,Para [Str "And",Space,Str "another."]]]
 ```
