Use CamelCase for JavaScript for uniformity
other instances when javascript is refered to in pandoc is also in CamelCase, the official casing of JavaScript.

--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -485,7 +485,7 @@ writing filters in Haskell.
 Those who would prefer to write filters in python can use the module
 \f[C]pandocfilters\f[], installable from PyPI.
 There are also pandoc filter libraries in PHP, perl, and
-javascript/node.js.
+JavaScript/node.js.
 .PP
 In order of preference, pandoc will look for filters in
 .IP "1." 3
