Regen man page.

--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -1,5 +1,5 @@
 .\"t
-.TH PANDOC 1 "October 27, 2017" "pandoc"
+.TH PANDOC 1 "October 27, 2017" "pandoc 2.0"
 .SH NAME
 pandoc - general markup converter
 .SH SYNOPSIS
